--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   let segments = [];
   const TOTAL_SEGMENTS = 500;
   let speed = 0;
+  let playerX = 0;
   const FPS = 30;
+  const SHAKE_INTENSITY = 2;
 
-  const maxSpeed = segmentLength * FPS;
+  const maxSpeed = segmentLength * FPS / 20;
   const accel = maxSpeed/5;
   const breaking = -maxSpeed;
   const decel = -maxSpeed/5;
-  // const offRoadDecel = -maxSpeed/2;
-  // const offRoadLimit =  maxSpeed/4;
+  const offRoadDecel = -maxSpeed/2;
+  const offRoadLimit =  maxSpeed/4;
 
   const keyPressed = {
     UP: false,
     DOWN: false,
-    // LEFT: false,
-    // RIGHT: false,
+    LEFT: false,
+    RIGHT: false,
   }
 
   function initializeRoadSegments() {
@@ -40,13 +42,13 @@
     trackLength = segments.length * segmentLength;
   }
 
-  function convertRoadTo2d(z, currentZPosition, isLooped, trackLength) {
+  function convertRoadTo2d(playerX, z, currentZPosition, isLooped, trackLength) {
     const cameraY = canvas.height - 50;
     const cameraZ = isLooped ? currentZPosition - trackLength : currentZPosition;
     const fieldOfView = 100;
     const cameraDepth = 1 / Math.tan((fieldOfView/2) * Math.PI/180);
     const roadWidth = 1000;
-    const translatedX = 0;
+    const translatedX = -playerX * roadWidth;
     const translatedY = -cameraY;
     const translatedZ = Math.abs(z - cameraZ);
     const scale = cameraDepth/translatedZ;
@@ -68,12 +70,30 @@
     context.fillRect(0,0,canvas.width, canvas.height);
     // TODO render scenery/background
 
+    const dx = (1/FPS) * 2 * (speed/maxSpeed); // at top speed, should be able to cross from left to right (-1 to 1) in 1 second
+    if (keyPressed.LEFT) {
+      playerX = playerX - dx;
+    }
+    else if (keyPressed.RIGHT)
+      playerX = playerX + dx;
+
+    if (playerX > 2) {
+      playerX = 2;
+    } else if (playerX < -2) {
+      playerX = -2;
+    }
+
     if (keyPressed.UP)
       speed = speed + (accel / FPS);
     else if (keyPressed.DOWN)
       speed = speed + (breaking / FPS);
     else
       speed = speed + (decel / FPS);
+
+    // offroad
+    if (((playerX < -1) || (playerX > 1)) && (speed > offRoadLimit)) {
+      speed = speed + (offRoadDecel / FPS);
+    }
 
     if (speed < 0) {
       speed = 0;
@@ -89,8 +109,8 @@
     for(n = 0 ; n < drawDistance ; n++) {
       segment = segments[(baseSegment.index + n) % segments.length];
       const isLooped = segment.index < baseSegment.index;
-      const segment2D_1 = convertRoadTo2d(segment.z1, currentZPosition, isLooped, trackLength);
-      const segment2D_2 = convertRoadTo2d(segment.z2, currentZPosition, isLooped, trackLength);
+      const segment2D_1 = convertRoadTo2d(playerX, segment.z1, currentZPosition, isLooped, trackLength);
+      const segment2D_2 = convertRoadTo2d(playerX, segment.z2, currentZPosition, isLooped, trackLength);
 
       context.fillStyle = 'green';
       context.fillRect(0, segment2D_2.y, canvas.width, segment2D_1.y - segment2D_2.y);
@@ -163,17 +183,23 @@
       // TODO render fog
     }
 
-    // TODO shake car when going fast
-    // draw car
+    // shake car more when going faster
+    const shakeCarX = (speed / maxSpeed) * getRandomArbitrary(-SHAKE_INTENSITY,SHAKE_INTENSITY);
+    const shakeCarY = (speed / maxSpeed) * getRandomArbitrary(-SHAKE_INTENSITY,SHAKE_INTENSITY);
+
+    // Draw Car
     context.drawImage(
       document.getElementById('carImage'),
       canvas.width / 2 - 100,
       canvas.height - 250,
-      200,
-      200,
+      200 + shakeCarX,
+      200 + shakeCarY,
     );
 
-    // TODO draw speed indicator
+    context.fillStyle = "white";
+    context.font = "30px Arial";
+    context.fillText("Speed: " + speed, 20, 100);
+    context.fillText("Distance: " + currentZPosition, 20, 40);
   }
 
   setInterval(() => {
@@ -192,14 +218,20 @@
     context.fill();
   }
 
+  function getRandomArbitrary(min, max) {
+    return Math.random() * (max - min) + min;
+  }
+
   document.addEventListener('keydown', keyDownHandler);
 
   function keyDownHandler(event) {
     switch (event.keyCode) {
-      // case 65: //Left(a)
-      //   break;
-      // case 68: //Right(d)
-      //   break;
+      case 65: //Left(a)
+        keyPressed.LEFT = true;
+        break;
+      case 68: //Right(d)
+        keyPressed.RIGHT = true;
+        break;
       case 83: //Down(s)
         keyPressed.DOWN = true;
         break;
@@ -213,10 +245,12 @@
 
   function keyUpHandler(event) {
     switch (event.keyCode) {
-      // case 65: //Left(a)
-      //   break;
-      // case 68: //Right(d)
-      //   break;
+      case 65: //Left(a)
+        keyPressed.LEFT = false;
+        break;
+      case 68: //Right(d)
+        keyPressed.RIGHT = false;
+        break;
       case 83: //Down(s)
         keyPressed.DOWN = false;
         break;
@@ -228,6 +262,6 @@
 
 </script>
 <h1>Retro Racer</h1>
+<div>WASD Controls</div>
 <div>Hold W to accelerate</div>
-<div>Hold S to deccelerate</div>
 <img id="carImage" src="car.png" style="display:none"/>
