Added left and right turn images, code formatting

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
 <h1>Retro Racer</h1>
 <div>WASD Controls</div>
 <div>Hold W to Accelerate</div>
-<img id="carImage" src="car.png" style="display:none"/>
+<img id="carImage" src="car.png" style="display:none" />
+<img id="carTurnLeftImage" src="car_turn_left.png" style="display:none" />
+<img id="carTurnRightImage" src="car_turn_right.png" style="display:none" />
